--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<h1> power is within you.do anything and everything.</h1>
-<h2> You are the creator of your destiny. </h2> 
+		<h1>do anything and everything.</h1> 
+		<h2> You are the creator of your destiny.</h2> 
 	</body>
 </html>
